# suiddd

./: .gitignore  analysis_options.yaml  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/sui/k/ddd/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  styles.xml
lib/: d.dart  info.dart  main.dart  quickset.dart  reboot.dart  set.dart  splash.dart
lib/app/: card.dart  export.dart  freeze.dart  main.dart  search.dart
lib/file/: file.dart  file_panel.dart  file_properties.dart
lib/lang/: en.arb  zh.arb
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
pkg/adb_client/: Cargo.toml
pkg/adb_client/src/: lib.rs
windows/runner/: Runner.rc
