[package]
name = "adb"
version = "3.0.2"
edition = "2024"
[lib]
name = "adb"
crate-type = ["cdylib", "staticlib"]
[dependencies]
adb_client = "3.1"
libc = "0.2.182"
rsa = "0.9.10"
[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
panic = "abort"
strip = true